crates/aranya-policy-lang/tests/data/invalid_text/escape_long_char.snap
---
source: crates/aranya-policy-lang/tests/tests.rs
expression: err
---
error: Invalid string
  |
1 | let x = "a\█b"
  |         ^^^^^^ unknown character escape: `\u{2588}`
